// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration preference - sorting categories 1`] = `
[
  "Tracks",
  "cat1",
  "cat2",
  "cat3",
  "cat4",
]
`;

exports[`configuration preference - sorting track names 1`] = `
[
  "Tracks",
  "cat1",
  "cat2",
  "cat3",
  "cat4",
]
`;

exports[`localstorage preference - sorting categories 1`] = `
[
  "Tracks",
  "cat1",
  "cat2",
  "cat3",
  "cat4",
]
`;

exports[`no tracks 1`] = `
<div>
  <div
    data-testid="hierarchical_track_selector"
  >
    <div
      style="display: flex;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-rlnh8o-MuiFormControl-root-MuiTextField-root-searchBox"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-standard css-1s1jvl0-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":r0:"
          id=":r0:-label"
        >
          Filter tracks
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedEnd css-q97sgx-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedEnd css-nz481w-MuiInputBase-input-MuiInput-input"
            id=":r0:"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeSmall css-1laqsz7-MuiInputAdornment-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
                data-testid="ClearIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="Recently used tracks"
          class="MuiBadge-root css-1c32n2y-MuiBadge-root"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
            data-testid="HistoryIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8z"
            />
          </svg>
          <span
            class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary css-l64p1-MuiBadge-badge-smallBadge"
          >
            0
          </span>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          aria-label="Favorite tracks"
          class="MuiBadge-root css-k9f182-MuiBadge-root-margin"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
            data-testid="GradeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
            />
          </svg>
          <span
            class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary css-l64p1-MuiBadge-badge-smallBadge"
          >
            0
          </span>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    style="position: relative; height: 9000px; overflow: auto; will-change: transform; direction: ltr;"
  >
    <div
      style="height: 40px; width: 100%;"
    >
      <div
        class="css-11rl2vh-accordionBase"
        style="position: absolute; left: 0px; top: 0px; height: 40px; width: 100%;"
      >
        <div
          class="css-1eoby3c-accordionCard"
          style="margin-left: 0px; white-space: nowrap; width: 100%;"
        >
          <div
            class="css-1dqsl7q-accordionColor"
          >
            <div
              class="css-1c2x1yy-accordionText"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-k0xfey-MuiTypography-root"
                data-testid="htsCategory-Tracks"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m7 10 5 5 5-5z"
                  />
                </svg>
                Tracks
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9ivluk-MuiButtonBase-root-MuiIconButton-root-contrastColor"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
                    data-testid="MoreHorizIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeSmall MuiFab-secondary MuiFab-root MuiFab-circular MuiFab-sizeSmall MuiFab-secondary css-15opis6-MuiButtonBase-root-MuiFab-root-fab"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
      data-testid="AddIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`small test data - categorized tracks 1`] = `
<div
  data-testid="hierarchical_track_selector"
>
  <div
    style="display: flex;"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
        data-testid="MenuIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-rlnh8o-MuiFormControl-root-MuiTextField-root-searchBox"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-standard css-1s1jvl0-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for=":r9:"
        id=":r9:-label"
      >
        Filter tracks
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedEnd css-q97sgx-MuiInputBase-root-MuiInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedEnd css-nz481w-MuiInputBase-input-MuiInput-input"
          id=":r9:"
          type="text"
          value=""
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeSmall css-1laqsz7-MuiInputAdornment-root"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="Recently used tracks"
        class="MuiBadge-root css-1c32n2y-MuiBadge-root"
        data-mui-internal-clone-element="true"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
          data-testid="HistoryIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8z"
          />
        </svg>
        <span
          class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary css-l64p1-MuiBadge-badge-smallBadge"
        >
          0
        </span>
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="Favorite tracks"
        class="MuiBadge-root css-k9f182-MuiBadge-root-margin"
        data-mui-internal-clone-element="true"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
          data-testid="GradeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
          />
        </svg>
        <span
          class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary css-l64p1-MuiBadge-badge-smallBadge"
        >
          0
        </span>
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`small test data - categorized tracks 2`] = `
[
  {
    "group": "Tracks",
    "menuItems": [],
    "noCategories": false,
    "tracks": [
      {
        "adapter": {
          "features": [
            {
              "end": 10,
              "refName": "ctgA",
              "seq": "cattgttgcg",
              "start": 0,
              "uniqueId": "firstId",
            },
          ],
          "type": "FromConfigSequenceAdapter",
        },
        "displays": [
          {
            "displayId": "sequenceConfigId-LinearReferenceSequenceDisplay",
            "type": "LinearReferenceSequenceDisplay",
          },
          {
            "displayId": "sequenceConfigId-LinearGCContentDisplay",
            "type": "LinearGCContentDisplay",
          },
        ],
        "trackId": "sequenceConfigId",
        "type": "ReferenceSequenceTrack",
      },
      {
        "assemblyNames": [
          "volMyt1",
        ],
        "category": [
          "Foo Category",
        ],
        "displays": [
          {
            "displayId": "fooC-LinearBasicDisplay",
            "type": "LinearBasicDisplay",
          },
          {
            "displayId": "fooC-LinearArcDisplay",
            "type": "LinearArcDisplay",
          },
        ],
        "trackId": "fooC",
        "type": "FeatureTrack",
      },
      {
        "assemblyNames": [
          "volMyt1",
        ],
        "category": [
          "Foo Category",
          "Bar Category",
        ],
        "displays": [
          {
            "displayId": "barC-LinearBasicDisplay",
            "type": "LinearBasicDisplay",
          },
          {
            "displayId": "barC-LinearArcDisplay",
            "type": "LinearArcDisplay",
          },
        ],
        "trackId": "barC",
        "type": "FeatureTrack",
      },
    ],
  },
]
`;

exports[`small test data - uncategorized tracks 1`] = `
<div
  data-testid="hierarchical_track_selector"
>
  <div
    style="display: flex;"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
        data-testid="MenuIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-rlnh8o-MuiFormControl-root-MuiTextField-root-searchBox"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-standard css-1s1jvl0-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for=":r3:"
        id=":r3:-label"
      >
        Filter tracks
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedEnd css-q97sgx-MuiInputBase-root-MuiInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedEnd css-nz481w-MuiInputBase-input-MuiInput-input"
          id=":r3:"
          type="text"
          value=""
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeSmall css-1laqsz7-MuiInputAdornment-root"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="Recently used tracks"
        class="MuiBadge-root css-1c32n2y-MuiBadge-root"
        data-mui-internal-clone-element="true"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
          data-testid="HistoryIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8z"
          />
        </svg>
        <span
          class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary css-l64p1-MuiBadge-badge-smallBadge"
        >
          0
        </span>
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-9vna8i-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="Favorite tracks"
        class="MuiBadge-root css-k9f182-MuiBadge-root-margin"
        data-mui-internal-clone-element="true"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-havevq-MuiSvgIcon-root"
          data-testid="GradeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
          />
        </svg>
        <span
          class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightRectangular MuiBadge-overlapRectangular MuiBadge-colorSecondary css-l64p1-MuiBadge-badge-smallBadge"
        >
          0
        </span>
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`small test data - uncategorized tracks 2`] = `
[
  {
    "group": "Tracks",
    "menuItems": [],
    "noCategories": false,
    "tracks": [
      {
        "adapter": {
          "features": [
            {
              "end": 10,
              "refName": "ctgA",
              "seq": "cattgttgcg",
              "start": 0,
              "uniqueId": "firstId",
            },
          ],
          "type": "FromConfigSequenceAdapter",
        },
        "displays": [
          {
            "displayId": "sequenceConfigId-LinearReferenceSequenceDisplay",
            "type": "LinearReferenceSequenceDisplay",
          },
          {
            "displayId": "sequenceConfigId-LinearGCContentDisplay",
            "type": "LinearGCContentDisplay",
          },
        ],
        "trackId": "sequenceConfigId",
        "type": "ReferenceSequenceTrack",
      },
      {
        "assemblyNames": [
          "volMyt1",
        ],
        "displays": [
          {
            "displayId": "fooC-LinearBasicDisplay",
            "type": "LinearBasicDisplay",
          },
          {
            "displayId": "fooC-LinearArcDisplay",
            "type": "LinearArcDisplay",
          },
        ],
        "trackId": "fooC",
        "type": "FeatureTrack",
      },
      {
        "assemblyNames": [
          "volMyt1",
        ],
        "displays": [
          {
            "displayId": "barC-LinearBasicDisplay",
            "type": "LinearBasicDisplay",
          },
          {
            "displayId": "barC-LinearArcDisplay",
            "type": "LinearArcDisplay",
          },
        ],
        "trackId": "barC",
        "type": "FeatureTrack",
      },
    ],
  },
]
`;

exports[`unsorted categories 1`] = `
[
  "1 toplevel",
  "2 toplevel",
  "3 toplevel",
  "4 toplevel",
  "5 toplevel",
  "6 toplevel",
  "7 toplevel",
  "8 toplevel",
  "9 toplevel",
  "10 toplevel",
  "1 cat1",
  "2 cat1",
  "3 cat1",
  "4 cat1",
  "5 cat1",
  "6 cat1",
  "7 cat1",
  "8 cat1",
  "9 cat1",
  "10 cat1",
  "1 cat1 cat2",
  "2 cat1 cat2",
  "3 cat1 cat2",
  "4 cat1 cat2",
  "5 cat1 cat2",
  "6 cat1 cat2",
  "7 cat1 cat2",
  "8 cat1 cat2",
  "9 cat1 cat2",
  "10 cat1 cat2",
  "1 cat3",
  "2 cat3",
  "3 cat3",
  "4 cat3",
  "5 cat3",
  "1 cat3 cat4",
  "2 cat3 cat4",
  "3 cat3 cat4",
  "4 cat3 cat4",
  "5 cat3 cat4",
]
`;
